[package]
name = "vrt_buffer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = {version = "0.16.0", features = ["bindgen"]}
bindgen = "0.69.4"
ndarray = "0.15.6"
clap = {version = "4.3.9", features = ["derive"]}
